# rag-evaluation-framework

./: .gitignore  README.md  demo.py  pyproject.toml  rag_pipeline_example.py  requirements-dev.txt  requirements.txt
.github/workflows/: docs.yml  release.yml  test.yml
api/: __init__.py  auth.py  database.py  deps.py  main.py  rate_limit.py  tasks.py
api/routers/: api_keys.py  batch.py  evaluate.py  reports.py
benchmarks/: BENCHMARKS.md  run_benchmarks.py  run_real_benchmarks.py
cli/: __init__.py  main.py
dashboard/: eslint.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
dashboard/app/evaluate/: page.tsx
dashboard/app/reports/[id]/: page.tsx
dashboard/app/trends/: page.tsx
dashboard/components/: EvalForm.tsx  HallucinationHeatmap.tsx  MetricRadar.tsx  ScoreCard.tsx
dashboard/lib/: api.ts
deploy/: nginx.conf  rag-evaluation-framework-api.service  rag-evaluation-framework-worker.service  setup.sh
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py
rag_evaluation_framework/: __init__.py  evaluator.py  models.py  prompts.py  report.py  utils.py
rag_evaluation_framework/adapters/: __init__.py  anthropic_adapter.py  base.py  litellm_adapter.py  ollama_adapter.py  openai_adapter.py
rag_evaluation_framework/metrics/: __init__.py  answer_relevance.py  context_coverage.py  faithfulness.py  hallucination.py  retrieval_precision.py  ucm_confidence.py
tests/: conftest.py
tests/fixtures/: mock_llm_responses.json  sample_evals.jsonl
tests/integration/: test_api.py
tests/unit/: test_adapters.py  test_evaluator.py  test_metrics.py  test_report.py
